# Conway-s_Game_of_Life_Rust

./: .gitignore  Cargo.toml  memory.x  readme.md
.cargo/: config
custom_crate/arduino_nano33iot/: Cargo.toml  build.rs
custom_crate/arduino_nano33iot/src/: lib.rs
src/: game.rs  main.rs
