[package]
name = "pybadge_ferris"
version = "0.1.0"
authors = ["Jacob Rosenthal <@jacobrosenthal>"]
description = "Board Support crate for the Adafruit EdgeBadge"
keywords = ["no-std", "arm", "cortex-m", "embedded-hal"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/atsamd-rs/atsamd"
readme = "README.md"
documentation = "https://atsamd-rs.github.io/atsamd/atsamd51j19a/edgebadge/"
edition = "2018"

[dependencies]
cortex-m = "~0.6"
embedded-hal = "~0.2.3"
nb = "~0.1"
st7735-lcd = "0.7"
edgebadge = "~0.5"
panic-halt = "~0.2"
embedded-graphics = "0.6.0"
smart-leds = "0.3"
ws2812-spi = "0.2.0"
ws2812-timer-delay = "~0.3"
lis3dh = "0.1.0"
cortex-m-rtic = "~0.5.1"

cortex-m-rt = {version = "~0.6.12",optional = true}

atsamd-hal = {version = "~0.9", default-features = false}

rand = {version = "0.7.3", default-features = false, features = [ "small_rng" ]}
arrayvec = {version = "0.5.1", default-features = false}

micromath = {version = "0.5.1", optional = true}

usb-device = {version = "~0.2", optional = true}
usbd-serial = {version = "~0.1", optional = true}

[features]
# ask the HAL to enable atsamd51j20a support
default = ["rt", "atsamd-hal/samd51j19a", "atsamd-hal/samd51", "unproven"]
rt = ["cortex-m-rt", "atsamd-hal/samd51j19a-rt"]
unproven = ["atsamd-hal/unproven"]
usb = ["atsamd-hal/usb", "usb-device", "usbd-serial"]
math = ["micromath"]

[profile.dev]
# opt-level = 2 # uncomment for neopixel functionality during debug
incremental = false
debug = true
lto = "thin" # thin for debug speed

[profile.release]
debug = true
lto = "fat"
opt-level = 3 # neopixel prefers 3 over s

